# standardizex

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
example_usage/: example_script1.py  example_script2.py  example_script3.py  example_script4.py
standardizex/: __init__.py  standardizex_utils.py
standardizex/config/: config_contract.py  config_factory.py  v0_json_config.py
standardizex/config/templates/json/: v0.json
standardizex/config_reader/: config_reader_contract.py  config_reader_factory.py  v0_json_config_reader.py
standardizex/data_standardizer/: data_standardizer.py
standardizex/utilities/: custom_exceptions.py
