[metadata]
name = standardizex
version = 0.0.1
author = Pallavi Sinha
author_email = dataaienthusiast128@gmail.com
description = """standardizex is a python package that simplify data standardization process for delta tables using Spark using a config-driven approach. 
The package is designed to be used in a PySpark environment.
The capabilities of the package include: column selection and renaming, column data type update, column description update, data transformation and also new columns addition.
"""
license = MIT
home-page = https://github.com/Pallavi-Sinha-12/standardizex